styles.css
* {
  font-family: 'IBM Plex Sans', sans-serif;
  font-weight: 500;
}

body {
  background-color: #fdfdff;
  color: #02171e;
  margin: 0;
  padding: 0;
}

hr {
  border-top: 1px #e4e7ea;
  margin: 0;
  padding: 0;
  opacity: 60%;
}

p {
  color: #828586;
  font-size: 1.6rem;
  line-height: 150%;
  font-weight: 400;
}

.bottom-header {
  background: url(images/devnode-gradient.svg);
  background-size: cover;
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
  font-weight: 600;
}

.button {
  border-radius: 5rem;
  font-size: 1rem;
  padding: 15px 39px;
}

.button:hover {
  cursor: pointer;
}

.primary {
  background-color: #02171e;
  color: white;
  border: 1px solid #02171e;
}

.primary:hover {
  background: url(images/devnode-gradient.svg) no-repeat center;
  border-color: transparent;
}

.secondary {
  background-color: white;
  color: #02171e;
  border: 1px solid #dadde0;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.secondary:hover {
  border: 1px solid #ababb1;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.devnode-logo {
  height: 48px;
  width: 48px;
}

.devnode-text {
  color: #02171e;
}

.description {
  width: 860px;
  text-align: center;
  padding: 0;
  margin: 16px 0px;
}

.layout {
  height: 100vh;
  background: url(images/devnode-bg.svg);
  background-repeat: no-repeat;
  background-size: auto;
}

.header {
  font-weight: 500;
  font-size: 6.25rem;
  line-height: 112%;
  text-align: center;
  padding: 0;
  margin: 0;
}

.navbar-content {
  display: flex;
  padding: 2rem 3.5rem;
  margin: 0;
  align-items: flex-start;
  justify-content: space-between;
}

.content {
  height: calc(100% - 240px);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin: 0;
}

.button-group {
  display: flex;
  gap: 16px;
}

.paragraph-break {
  display: none;
}

.button-group-item {
  width: 'auto';
}

@media screen and (max-width: 1400px) {
  p {
    font-size: calc(16px + 0.5vw);
    line-height: 125%;
  }

  .description {
    padding: 0.4vw;
    max-width: 75%;
  }

  .header {
    font-size: 7vw;
  }

  .navbar-content {
    padding: 1.5rem 2rem;
  }
}

@media screen and (max-width: 1020px) {
  .description {
    width: 80%;
    display: flex;
    flex-direction: column;
    gap: 20px;
  }

  /* .paragraph-break {
    content: '';
    margin: 2em;
    display: block;
    margin-bottom: -20px;
  } */
}

@media screen and (max-width: 640px) {
  .content {
    align-items: start;
    justify-content: end;
  }

  .header {
    font-size: 6.7vw;
    line-height: 125%;
    text-align: start;
  }

  .description {
    text-align: start;
    max-width: 100%;
    width: 100%;
  }

  .content {
    margin: 0 1.5rem;
  }

  .button-group {
    flex-direction: column;
    width: 100%;
    gap: 8px;
  }

  .button-group-item {
    width: 100%;
  }

  .navbar-content {
    padding: 1rem 1.5rem;
  }
}

/* Preload DevNode gradient for smooth first transition in primary CTA */

body::after {
  position: absolute;
  width: 0;
  height: 0;
  overflow: hidden;
  z-index: -1;
  content: url(images/devnode-gradient.svg);
}

